added markdown comment to eda notebook

--- a/src/eda/EDA.ipynb
+++ b/src/eda/EDA.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f9aaed69",
+   "metadata": {},
+   "source": [
+    "## EDA"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "66506f72",
+   "metadata": {},
+   "source": [
+    " ### Get data from wandb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1324e903",
@@ -16,6 +34,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8a91e36e",
+   "metadata": {},
+   "source": [
+    "### Profile data to get a \"high level\" view of it"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6a7fce8e",
@@ -26,6 +53,15 @@
     "\n",
     "profile = pandas_profiling.ProfileReport(df)\n",
     "profile.to_widgets()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "35a8dc6c",
+   "metadata": {},
+   "source": [
+    "### Filter out outliers"
    ]
   },
   {
@@ -52,6 +88,15 @@
    "outputs": [],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5391eefa",
+   "metadata": {},
+   "source": [
+    "### Terminate the run"
    ]
   },
   {
